# robogen-modal

./: .gitignore  CLAUDE.md  pyproject.toml  robogen_modal_conda.py  run_tasks_batch.py
.claude/: settings.local.json
archive/: gpt-4-coffee-end-log.txt  robogen_modal.py  run_logs.txt  run_logs_2.txt  run_modal.py
frontend/.claude/: settings.local.json
modal/: .gitignore  2026-01-02-1-openai.sh  2026-01-02-1.sh  2026-01-02-2-openai.sh  2026-01-02-2.sh  2026-01-02-3-openai.sh  2026-01-02-3.sh  2026-01-02-4-openai.sh  2026-01-02-4.sh  2026-01-02-5-openai.sh  2026-01-02-5.sh  2026-01-06-2.sh  2026-01-06-3.sh  2026-01-06-4.sh  2026-01-06-5.sh  2026-01-06-6.sh  2026-01-06-7.sh  2026-01-06.sh  README.md  all_substeps.json  pyproject.toml  robogen_modal_conda.py  run_all_tasks.sh  run_batch_tasks.py  run_tasks_batch.py  update_toml_log.py
modal/archive/: robogen_modal.py  run_modal.py  task_runs_log.csv
modal/data/tasks/: 2025-12-11.jsonl  2025-12-11.txt  2026-01-02-from-GPT-5-2.json  2026-01-02-part1.json  2026-01-02-part2.json  2026-01-02-part3.json  2026-01-02-part4.json  2026-01-02-part5.json
modal/scripts/: README.md  all_substeps.json  clustering_results.json  clustering_results_hierarchical-kmeans_k3-20.json  clustering_results_human_labeled_k9.json  clustering_results_spectral_k3-20.json  download_all_graphs.py  get_stats.py  logger_utils.py  run_clustering.py  task_visualizer.py
scripts/: download_all_graphs.py  download_graphs.sh  generate_task_to_rotate_box.sh  logger_utils.py  run_generations_2025-12-12.sh  task_visualizer.py
(+10 files in other folders)
